# watchtowerctl

./: main.py  pyproject.toml
agents/: agent_base.py  agent_interface.py  main_agent.py  memory_agent_detector.py  p_ai_agents.py
agents/feature_steps/: back_recovery_steps.py  backup_recovery.feature  incident_handling_steps.py  incident_response_feature.feature  multiagent_code_structure.watch  system_basis.feature  training_awareness.feature  training_awareness_steps.py
agents/workers/: agent_workers.py  worker_memory.py
docs/: README_RAG.md  README_smolagent.md  machine_imperative_one
models/: event_bus.py  j2_command_builder.py  lsof_light.py  procinfo.py  reinforcement_learning.py
service_manager/: __init__.py  config.py  constants.py  encryption_service.py  exceptions.py  manager.py  output_models.py  sandbox.py
stability/: __init__.py  base_thread_container.py  container_process.py  object_behavior_analysis.py  object_control_graph.py  thread_acquisition_proxy.py
structure_exports/: service_manager_structure.json
tools/: agent_utils.py  bootout.sh  launchctl_management.py  macos_integrations.py  python_detections.py
tools/loaders/: yara_loaders.py
