[project]
name = "watchtowerctl"
version = "0.1.0"
description = ""
authors = [
    {name = "Derek Hinch",email = "derek.hinch@qompute.ai"}

]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pyobjc (>=11.0,<12.0)",
    "yara (>=1.7.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
